# hooky

./: .gitignore  Cargo.toml  README.md  build.rs
examples/yesterday/: Cargo.toml
examples/yesterday/src/: lib.rs
native/: core.c  elfhacks.c
src/: common.rs  dl.rs  elf.rs  lib.rs  macros.rs
