[package]
name = "hooky"
version = "0.1.0"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/hooky"
homepage = "https://github.com/koute/hooky"
documentation = "https://docs.rs/hooky/*/hooky/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["LD_PRELOAD", "hooking"]
description = "Convenient LD_PRELOAD hooker"
edition = "2018"

[dependencies]
libc = "0.2"

[features]
default = []
